# motivational-overleaf-word-counter-discord-bot

./: .gitignore  Cargo.toml  README.md  README.org  flake.nix  shell.nix
src/: main.rs
