[package]
name = "overleaf_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.12"
tokio = { version = "1.21.2", features = ["full"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
reqwest = {version = "0.11.26", features = ["json"]}
serde_json = "1.0.114"
toml = "0.8.11"
rand = "0.8.5"
lazy_static = "1.4.0"
